# imgcode

./: Cargo.toml  a.txt  test.xcf
src/: main.rs
src/lib/: cursor.rs  error.rs  file.rs  lib.rs  private.rs  reader.rs  traits.rs  util.rs  writer.rs
