[package]
name = "imgcode"
version = "0.1.0"
edition = "2021"
autobins = false

[lib]
path = "src/lib/lib.rs"

[[bin]]
name = "imgcode"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.71"
bincode = "1.3.3"
clap = { version = "4.3.0", features = ["derive"] }
image = "0.24.6"
serde = { version = "1.0.163", features = ["derive"] }
